Fixed the error handler from not showing up in the auth pages

--- a/public/scss/authentication.scss
+++ b/public/scss/authentication.scss
@@ -1,4 +1,5 @@
 @import "./imports/_vars_imports";
+@import "./imports/_error_handler";
 
 #authentication {
   width: 100%;
@@ -134,7 +135,7 @@
 }
 
 .authentication_footer {
-  z-index: 2;
+  z-index: 1;
   position: absolute;
   bottom: 0;
   width: 60%;
@@ -150,41 +151,6 @@
       text-decoration: none;
       border-bottom: 3px solid $darker_primary;
       border-block-width: 200%;
-    }
-  }
-}
-
-#error_handler_wrapper {
-  width: 100%;
-  #error_handler {
-    transform: translateY(100%);
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 15%;
-    background-color: $red;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    animation: showErrors 5s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in-out;
-    .error_handler_x {
-      color: white;
-      font-size: 56px;
-      margin-right: 20px;
-    }
-    .error_handler_output {
-      display: flex;
-      flex-direction: column;
-      .error_handler_output_line {
-        margin: 0;
-        font-family: $fonts;
-        color: white;
-        margin-left: 20px;
-        font-size: 18px;
-      }
     }
   }
 }
