--- a/public/scss/imports/__error_handler.scss
+++ b/public/scss/imports/__error_handler.scss
@@ -1,10 +1,10 @@
 #error_handler_wrapper {
-  z-index: 999;
+  z-index: 999 !important;
   width: 100%;
+  position: fixed;
+  bottom: 0;
   #error_handler {
     transform: translateY(100%);
-    position: fixed;
-    bottom: 0;
     width: 100%;
     height: 15%;
     background-color: $red;
@@ -20,14 +20,14 @@
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
     .error_handler_x {
       color: white;
-      font-size: 56px;
-      margin-right: 20px;
+      font-size: 48px;
+      margin: 10px 20px;
     }
     .error_handler_output {
       display: flex;
       flex-direction: column;
       .error_handler_output_line {
-        margin: 0;
+        margin: 5px 0;
         font-family: $fonts;
         color: white;
         margin-left: 20px;
